<resources>
    <string name="app_name" translatable="false">4l1-app</string>
    <string name="keeper">Keeper</string>
    <string name="patient">Patient</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="bonds">Bonds</string>
    <!-- Activity titles -->
    <string name="title_activity_patient_main">Main</string>
    <string name="title_activity_set_up">Set Up</string>
    <!-- Fragment labels -->
    <string name="title_fragment_contact_fill">Add contact info</string>
    <string name="title_fragment_role_selection">Select your role</string>
    <!-- Navigation -->
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="previous">Previous</string>
    <!-- Media description -->
    <string name="patient_media_description">Icon of patients</string>
    <string name="keeper_media_description">Icon of keepers</string>
    <string name="profile_banner_description">Banner of the profile card</string>
    <string name="profile_picture_description">Profile picture of the user</string>
    <!-- Text view placeholders -->
    <string name="hint_address_street">Street, number</string>
    <string name="hint_address_extended">Door</string>
    <string name="hint_address_locality">Locality</string>
    <string name="hint_address_region">Region</string>
    <string name="hint_email">Email address</string>
    <string name="hint_name">Your name</string>
    <string name="hint_phone">Main way to contact you</string>
    <string name="hint_phone_alt">Alternative phone number, just in case</string>
    <!-- Activity strings -->
    <string name="alt_phone_number">Alternative phone number</string>
    <string name="hello_name">Hello %s!</string>
    <string name="choose_address">Your postal address</string>
    <string name="choose_email">An email address, useful to share files</string>
    <string name="choose_name">Pick a name for the rest of users to see</string>
    <string name="contact_info_description">The following information is optional, but it can be very valuable to contact you in case of emergency. If you don\'t want to set it up now, you can always do it later</string>
    <string name="choose_phone_alt">Alternative</string>
    <string name="keeper_definition">You are here to help someone you care a lot for</string>
    <string name="patient_definition">You want to use this app to allow your dearest ones to help you.</string>
    <string name="role_selection">What kind of user are you?</string>
    <string name="title_fragment_set_up_confirmation">Welcome</string>
    <string name="welcome">Welcome to All For One</string>
    <string name="welcome_user">Welcome %s</string>
    <string name="profile_card_description">This is your profile card. Check that everything is OK. If it\'s not you can go back and fix what is wrong.</string>
    <string name="profile_card_confirmation">If everything is OK, we can finish the set up</string>
    <string name="desc_expand_card_view">Button to expand the card view</string>
    <string name="warn_no_bonds">Looks like you don\'t have any bond established yet, please create one to make full use of the application</string>
    <string name="desc_warning_icon">Warning icon</string>
    <string name="add_bond">Add bond</string>
    <string name="desc_qr_code">Bonding QR Code</string>
    <string name="desc_collapse_qr_view">Button to collapse the view of the QR</string>
    <string name="collapse">Collapse</string>
    <string name="scan_instructions">Scan the following QR Code with your new Keeper application to form the bond</string>
    <string name="forge_bond">Forge bond</string>
    <string name="error_qr_scanner">Some error occurred while using the QR Scanner, please try again</string>
    <string name="desc_user_icon">User icon</string>
    <string name="desc_user_phone">Phone icon</string>
    <string name="desc_address">Postal address</string>
    <string name="desc_email">Email</string>
    <string name="title_activity_location">Find</string>
    <string name="share_location">Share location</string>
    <string name="find">Find %s</string>
    <string name="find_me">Find me</string>
    <string name="cared_tasks">%s tasks</string>
    <string name="warn_searching">%s is searching for you, you should start sharing your location.</string>
    <string name="warn_sharing_location">%s is sharing their location, you should probably check it out.</string>
    <string name="user_joined_search">%s has joined the search</string>
    <string name="user_joined_room">%s has joined the room</string>
    <string name="user_left_room">%s has left the room</string>
    <string name="app_name_full" translatable="false">All For One</string>
    <string name="title_activity_qr">Bond user</string>
    <string name="title_activity_bonds">Bonds</string>
    <string name="title_activity_keeper_main">Keeper Lobby</string>
    <string name="title_activity_launch">Welcome</string>
    <string name="desc_logo">Logo of the app</string>
    <string name="feed">Feed</string>
    <string name="enter_message">Enter Message…</string>
    <string name="send">Send</string>
    <string name="title_activity_feed">%s Room</string>
    <string name="default_timestamp" translatable="false">10:00</string>
    <string name="new_message">%s sent a new message</string>
    <string name="title_activity_tasks">My Tasks</string>
    <string name="desc_task_fab">Create a task</string>
    <string name="tasks">Tasks</string>
    <string name="my_tasks">My tasks</string>
    <string name="desc_complete_task">Mark task as done or undone</string>
    <string name="desc_expand_task">Show or hide all the task info</string>
    <string name="created_by">Created by %s</string>
    <string name="last_update">Last update: %s</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_task">Create task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="mandatory">Mandatory</string>
    <string name="complete_task_title">Complete task</string>
    <string name="revert_task_title">Revert task</string>
    <string name="complete_task_msg">Are you sure you want to set %s as completed?</string>
    <string name="revert_task_msg">Are you sure you want to change %s to not completed?</string>
    <string name="confirm">Confirm</string>
    <string name="task">Task</string>
    <string name="desc_remove_task">Remove task</string>
    <string name="delete_task_title">Delete task</string>
    <string name="delete_task_msg">Are you sure you want to delete %s? If you do, the rest of users won\'t be able to see the task. You don\'t need to delete a completed task to hide, it will do itself after a few days</string>
    <string name="delete_bond_msg">Are you sure you want to delete the bond with %s?</string>
    <string name="empty_template" translatable="false">%s</string>
    <string name="user_set_task_not_done">%s has set task %s as not done</string>
    <string name="user_deleted_message">Deleted %s</string>
    <string name="user_stopped_sharing">%s stopped sharing its location</string>
    <string name="user_created_new_task">%s has created the task %s</string>
    <string name="user_deleted_task">%s has deleted the task %s</string>
    <string name="user_completed_task">%s completed the task %s</string>
    <string name="notifications">Notifications</string>
    <string name="user_has_bonded">Your cared is now bonded with %s</string>
    <string name="desc_mark_as_read">Mark the notification as read</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="back">Back</string>
    <string name="go">Go</string>
    <string name="desc_notifications">Show the notifications</string>
    <string name="desc_settings">Opens the settings menu</string>
    <string name="title_create_profile">Create profile</string>
    <string name="desc_card_background">Background of the card</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="delete_bond_title">Delete bond</string>
    <string name="title_new_bond">New bond</string>
    <string name="title_bond_deleted">Bond deleted</string>
    <string name="title_task_created">New task</string>
    <string name="title_task_deleted">Task deleted</string>
    <string name="title_task_done">Task completed</string>
    <string name="title_task_undone">Task resetted</string>
    <string name="title_location_sharing">Location share</string>
    <string name="title_location_stop">Location sharing stopped</string>
    <string name="channel_bond">Bond</string>
    <string name="channel_bond_desc">Notifications of new or deleted bonds</string>
    <string name="channel_location">Location</string>
    <string name="channel_location_desc">Notifications of geolocation sharings</string>
    <string name="channel_task">Tasks</string>
    <string name="channel_task_desc">Notification of creation, edition or removal of tasks</string>
    <string name="update_user">Update user</string>
    <string name="edit_user">Edit profile</string>
</resources>