<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >


    <data>
        <import type="android.view.View" />
        <variable
            name="handler"
            type="dev.sotoestevez.allforone.util.helpers.settings.ViewModelSettingsHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lblNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/settings"
            style="@style/TextAppearance.MaterialComponents.Headline2"/>

        <!-- Delete bond -->

        <Button
            android:id="@+id/btnUnbond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_read"
            android:text="@string/delete_bond_title"
            android:layout_gravity="start"
            android:onClick="@{() -> handler.removeBond()}"
            android:visibility="@{handler.patient ? View.GONE : View.VISIBLE}"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

        <!-- Log out button -->

        <Button
            android:id="@+id/btnCloseSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_read"
            android:text="@string/log_out"
            android:layout_gravity="start"
            android:onClick="@{() -> handler.closeSession()}"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:icon="@drawable/ic_baseline_arrow_back"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>

</layout>