<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="name"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@id/txtNameSelection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNameSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/choose_name"
            app:layout_constraintBottom_toTopOf="@id/btnNextNameSelection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblWelcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtNameSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"
                android:inputType="textPersonName"
                android:text="@{name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNextNameSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNameSelection" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>