<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblContactInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/contact_info_description"
        app:layout_constraintBottom_toTopOf="@id/txtContactPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Main phone number -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContactPhone"
        android:layout_width="@dimen/long_text_width"
        android:layout_height="wrap_content"
        android:hint="@string/choose_phone"
        app:helperText="@string/hint_phone"
        app:layout_constraintBottom_toTopOf="@id/txtContactPhoneAlt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblContactInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTxtContactPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_PHONE_NUMBER"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Alternative phone number -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactPhoneAlt"
            android:layout_width="@dimen/long_text_width"
            android:layout_height="wrap_content"
            android:hint="@string/choose_phone_alt"
            app:helperText="@string/hint_phone_alt"
            app:layout_constraintBottom_toTopOf="@id/layContactAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContactPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtContactPhoneAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_PHONE_NUMBER"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>



    <!-- Address -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layContactAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txtContactEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtContactPhoneAlt">


        <TextView
            android:id="@+id/lblContactAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_address"
            app:layout_constraintBottom_toTopOf="@id/txtContactAddressStreet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Street line and extra line -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactAddressStreet"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_street"
            app:layout_constraintBottom_toTopOf="@id/txtContactAddressLocality"
            app:layout_constraintEnd_toStartOf="@id/txtContactAddressExtended"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblContactAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtContactAddressStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_STREET_ADDRESS"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactAddressExtended"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_extended"
            app:layout_constraintBottom_toTopOf="@id/txtContactAddressRegion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtContactAddressStreet"
            app:layout_constraintTop_toBottomOf="@id/lblContactAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtContactAddressExtended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_STREET_ADDRESS"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Location and region line -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactAddressLocality"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_locality"
            android:layout_marginEnd="@dimen/base_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtContactAddressRegion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContactAddressStreet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtContactAddressLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtContactAddressRegion"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_region"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtContactAddressRegion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContactAddressStreet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTxtContactAddressRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Email -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContactEmail"
        android:layout_width="@dimen/long_text_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address_email"
        app:helperText="@string/choose_email"
        app:layout_constraintBottom_toTopOf="@id/layButtonsContactFill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layContactAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTxtContactEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Buttons -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layButtonsContactFill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtContactEmail" >

        <Button
            android:id="@+id/btnPreviousContactFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnNextContactFill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNextContactFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPreviousContactFill"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>