<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="dev.sotoestevez.allforone.vo.User.Role"/>

        <import type="android.view.View" />

        <variable
            name="model"
            type="dev.sotoestevez.allforone.ui.activities.bonds.BondsViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/layBonds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:context=".ui.activities.bonds.BondsActivity">

        <!-- Bonds list -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBonds"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:heldItems="@{model.bonds}"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/content_bond_item" />

        <!-- New bond section, only for Patients -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="@{model.user.Role == Role.PATIENT &amp; model.bonds.size() &lt; 6 ? View.VISIBLE : View.GONE }"
            tools:context=".ui.activities.bonds.BondsActivity">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Expand button -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddBond"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_extra"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:text="@string/add_bond"
                android:textSize="@dimen/txt_btn_extra" />

            <!-- Expanded content -->

            <LinearLayout
                android:id="@+id/layQr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_collapse_qr"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collapse"
                    app:icon="@drawable/ic_expand_arrow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/scan_instructions" />

                <ImageView
                    android:id="@+id/imgQrCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_qr_code"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>